--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Brianna & Filipe's Love Story</title>
 
     <!-- Link to the CSS file (to make it pretty) -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Background Music -->
