--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <!-- Background Music -->
     <audio id="backgroundMusic" loop autoplay>
-        <source src="music/last-christmas.mp3" type="audio/mp3">
-        <source src="music/last-christmas.ogg" type="audio/ogg">
+        <source src="last-christmas.mp3" type="audio/mp3">
+        <source src="last-christmas.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
 
