--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <section class="photo-gallery">
             <h2>Photo Memories</h2>
-            <img src="images/cute-photo1.jpg" alt="A cute photo of us" class="photo">
-            <img src="images/cute-photo2.jpg" alt="Tongues out" class="photo">
+            <img src="imagescute-photo1.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo2.jpg" alt="Gangster" class="photo">
         </section>
 
         <section class="fun-facts">
