--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </audio>
 
     <header>
-        <h1>Welcome to Our Love Story ❤️</h1>
+        <h1>Welcome to Brianna & Filipe's Love Story ❤️</h1>
     </header>
 
     <main>
@@ -46,7 +46,7 @@
         <p id="loveNote"></p>
 
         <!-- Music Toggle Button -->
-        <button id="musicToggleButton">Pause Music 🎶</button>
+        <button id="musicToggleButton">Play Music 🎶</button>
     </main>
 
     <footer>
