--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+    <div class="snow"></div> <!-- Snowflakes will fall here -->
+    
     <!-- Background Music -->
     <audio id="backgroundMusic" loop autoplay>
         <source src="last-christmas.mp3" type="audio/mp3">
