--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <p id="loveNote"></p>
 
         <!-- Music Toggle Button -->
+        <button id="musicToggleButton">Pause Music 🎶</button>
         <button id="musicToggleButton">Play Music 🎶</button>
     </main>
 
