--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+    
     <div class="snow"></div> <!-- Snowflakes will fall here -->
     
     <!-- Background Music -->
-    <audio id="backgroundMusic" loop autoplay>
+    <audio id="backgroundMusic" loop>
         <source src="last-christmas.mp3" type="audio/mp3">
-
     </audio>
 
     <header>
@@ -30,8 +29,8 @@
 
         <section class="photo-gallery">
             <h2>Photo Memories</h2>
-            <img src="imagescute-photo1.jpg" alt="A cute photo of us" class="photo">
-            <img src="imagescute-photo2.jpg" alt="Gangster" class="photo">
+            <img src="cute-photo1.jpg" alt="A cute photo of us" class="photo">
+            <img src="cute-photo2.jpg" alt="Gangster" class="photo">
         </section>
 
         <section class="fun-facts">
@@ -45,7 +44,7 @@
             </ul>
         </section>
 
-        <button id="loveNoteButton">Click for a Surprise Love Note 💌</button>
+        <button id="loveNoteButton">Click for a Surprise Love Note 📬</button>
         <p id="loveNote"></p>
 
         <!-- Music Toggle Button -->
