--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         <section class="photo-gallery">
             <h2>Photo Memories</h2>
-            <img src="cute-photo1.jpg" alt="A cute photo of us" class="photo">
-            <img src="cute-photo2.jpg" alt="Gangster" class="photo">
+            <img src="imagescute-photo1.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo2.jpg" alt="Gangster" class="photo">
         </section>
 
         <section class="fun-facts">
