--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 <body>
     
-    <div class="snow"></div> <!-- Snowflakes will fall here -->
-    
     <!-- Background Music -->
     <audio id="backgroundMusic" loop>
         <source src="last-christmas.mp3" type="audio/mp3">
@@ -34,6 +32,32 @@
         </section>
 
         <section class="fun-facts">
+            <h2>Fun Facts</h2>
+            <ul>
+                <li>Our favorite date: Aquarium</li>
+                <li>Our favorite song: Espresso by Sabrina Carpenter</li>
+                <li>Our dream trip: Key West</li>
+                <li>Our favorite movie: The Kissing Booth</li>
+                <li>Our favorite (but not really) food: Dunkin</li>
+            </ul>
+        </section>
+
+        <button id="loveNoteButton">Click for a Surprise Love Note 📬</button>
+        <p id="loveNote"></p>
+
+        <!-- Music Toggle Button -->
+        <button id="musicToggleButton">Play Music 🎶</button>
+    </main>
+
+    <footer>
+        <p>Made with love ❤️ by Brianna</p>
+    </footer>
+
+    <!-- Link to the JavaScript file (for button interaction) -->
+    <script src="script.js"></script>
+</body>
+</html>
+
             <h2>Fun Facts</h2>
             <ul>
                 <li>Our favorite date: Aquarium</li>
