--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
             <h2>Photo Memories</h2>
             <img src="imagescute-photo1.jpg" alt="A cute photo of us" class="photo">
             <img src="imagescute-photo2.jpg" alt="Gangster" class="photo">
+            <img src="imagescute-photo3.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo4.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo5.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo6.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo7.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo8.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo9.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo10.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo11.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo12.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo13.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo14.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo15.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo16.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo17.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo18.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo19.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo20.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo21.jpg" alt="A cute photo of us" class="photo">
         </section>
 
         <section class="fun-facts">
