--- a/index.html
+++ b/index.html
@@ -16,16 +16,56 @@
     </audio>
 
     <header>
-        <button id="musicToggleButton">Play Music 🎶</button>
+    
         <h1>Welcome to Brianna & Filipe's Love Story ❤️</h1>
+         <!-- Music Toggle Button -->
+        <button id="musicToggleButton">Play Music 🎶</button>
     </header>
 
     <main>
         <section class="about-us">
             <h2>About Us</h2>
-            <p>We met on August 8, 2023...</p>
+            <p>We met on August 8, 2023 after very briefly crossing paths once or twice in our lives. We lived a mere 4 streets away from each other, unaware that there had been an invisible string tying us together until the day we were destined to finally meet. Since then, it's been an unforgettable adventure. We are the truest definition of when two people love each other. This page is a celebration of our love story.</p>
         </section>
-        <!-- Other sections... -->
+
+        <section class="photo-gallery">
+            <h2>Photo Memories</h2>
+            <img src="imagescute-photo1.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo2.jpg" alt="Gangster" class="photo">
+            <img src="imagescute-photo3.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo4.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo5.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo6.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo7.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo8.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo9.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo10.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo11.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo12.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo13.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo14.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo15.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo16.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo17.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo18.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo19.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo20.jpg" alt="A cute photo of us" class="photo">
+            <img src="imagescute-photo21.jpg" alt="A cute photo of us" class="photo">
+        </section>
+
+        <section class="fun-facts">
+            <h2>Fun Facts</h2>
+            <ul>
+                <li>Our favorite date: Aquarium</li>
+                <li>Our favorite song: Espresso by Sabrina Carpenter</li>
+                <li>Our dream trip: Key West</li>
+                <li>Our favorite movie: The Kissing Booth</li>
+                <li>Our favorite (but not really) food: Dunkin</li>
+            </ul>
+        </section>
+
+        <button id="loveNoteButton">Click for a Surprise Love Note 📬</button>
+        <p id="loveNote"></p>
     </main>
 
     <footer>
