--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
     <main>
         <section class="about-us">
             <h2>About Us</h2>
-            <p>We met on August 8, 2023 after very briefly crossing paths once or twice in our lives. We lived a mere 4 streets away from each other, unaware that there had been an invisible string tying us together until the day we were destined to finally meet. Since then, it's been an unforgettable adventure. We are the truest definition of when two people love each other. This page is a celebration of our love story.</p>
+            <p>For so long, we lived just a mere four streets apart, completely unaware of the invisible string that had always connected us. We may have crossed paths once or twice, a glance here, a fleeting moment there — until the universe finally let us in on a secret it had been quietly weaving for years.  Once we met, everything changed!
+
+Since that day, our love story has been nothing short of a miracle. It’s the kind of love that novels try to capture but rarely do. It’s not just fireworks and grand gestures — though we’ve had our share of those — but it’s also the quiet moments, the simple touches, the way we take care of eachother and the joy of sharing even the smallest victories together. 
+
+I’ve never felt more seen, more cherished, or more safe. With you, I’ve learned that love isn’t about perfection — it’s about patience, forgiveness, and presence. You’ve shown me that love isn’t just a feeling; it’s an action, a promise we renew daily. I’m grateful for every shared laugh, every night spent talking about nothing and everything, and every dream of the future we’re building together.
+
+This page is a celebration of our love. It’s a tribute to every little moment we have spent together. The way you always reach for my hand without thinking. The way you see my flaws and love me harder for them. The way you’ve become not just my partner, but my home. Each line, photo, each song on this page holds a memory, a promise, a reminder of how  much we've grown together.
+
+Christmas has always been a season of magic, but this year, it’s different. There is comfort and peace in knowing that, no matter what’s under the tree, I’ve already received the greatest gift of all — you.
+
+So, as you scroll through this page, know that every bit of it was created with you in mind. Each story, each photo, each tiny festive detail is a love letter to you. I hope you feel how deeply you’re loved, how cherished you are, and how much I’m looking forward to all the Christmases we’ll share. From this day forward, every holiday will be brighter because you’re in it.
+
+I love you.</p>
         </section>
 
         <section class="photo-gallery">
